# tradingSecurities

./: .gitignore
py_workspace/: pyproject.toml  tata_steel.py
stockTrading_technicalAnalysisCourse/: notes.org
